Maintenance Document related changes
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6020 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/menu/iframes/maint-maintdoc-pro-SubmissionType.html
+++ b/menu/iframes/maint-maintdoc-pro-SubmissionType.html
@@ -111,7 +111,7 @@
 	
 
 
-	<link href="maint-maintdoc-pro-SubmissionType_files/kuali.css" rel="stylesheet" type="text/css">
+	<link href="../../css/kuali.css" rel="stylesheet" type="text/css">
 
 
 
