--- a/menu/iframes/maint-pro-PersonEditableField.html
+++ b/menu/iframes/maint-pro-PersonEditableField.html
@@ -162,7 +162,7 @@
 
 
 		
-			<div class="lookupcreatenew" title="Create a new record"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=start"><img src="maint-pro-PersonEditableField_files/tinybutton-createnew.gif" alt="create new" height="15" width="70"></a></div>
+			<div class="lookupcreatenew" title="Create a new record"><a href="maint-maintdoc-pro-PersonEditable.html?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&methodToCall=start"><img src="maint-pro-PersonEditableField_files/tinybutton-createnew.gif" alt="create new" width="70" height="15" border="0"></a></div>
 		
 
 		
@@ -1378,133 +1378,133 @@
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="addressLine1">addressLine1</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">No&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=edit&amp;fieldName=addressLine1">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=copy&amp;fieldName=addressLine1">copy</a></td></tr>
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="addressLine2">addressLine2</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">No&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=edit&amp;fieldName=addressLine2">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=copy&amp;fieldName=addressLine2">copy</a></td></tr>
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="city">city</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">No&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=edit&amp;fieldName=city">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=copy&amp;fieldName=city">copy</a></td></tr>
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="country">country</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">No&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=edit&amp;fieldName=country">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=copy&amp;fieldName=country">copy</a></td></tr>
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="directoryTitle">directoryTitle</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">No&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=edit&amp;fieldName=directoryTitle">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=copy&amp;fieldName=directoryTitle">copy</a></td></tr>
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="emailAddress">emailAddress</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">No&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=edit&amp;fieldName=emailAddress">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=copy&amp;fieldName=emailAddress">copy</a></td></tr>
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="eraCommonsUserName">eraCommonsUserName</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">No&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=edit&amp;fieldName=eraCommonsUserName">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=copy&amp;fieldName=eraCommonsUserName">copy</a></td></tr>
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="faculty">faculty</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">No&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=edit&amp;fieldName=faculty">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=copy&amp;fieldName=faculty">copy</a></td></tr>
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="faxNumber">faxNumber</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">No&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=edit&amp;fieldName=faxNumber">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=copy&amp;fieldName=faxNumber">copy</a></td></tr>
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="fullName">fullName</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">No&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=edit&amp;fieldName=fullName">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=copy&amp;fieldName=fullName">copy</a></td></tr>
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="homeUnit">homeUnit</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">No&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=edit&amp;fieldName=homeUnit">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=copy&amp;fieldName=homeUnit">copy</a></td></tr>
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="mobilePhoneNumber">mobilePhoneNumber</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">No&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=edit&amp;fieldName=mobilePhoneNumber">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=copy&amp;fieldName=mobilePhoneNumber">copy</a></td></tr>
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="officeLocation">officeLocation</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">No&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=edit&amp;fieldName=officeLocation">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=copy&amp;fieldName=officeLocation">copy</a></td></tr>
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="officePhone">officePhone</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">No&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=edit&amp;fieldName=officePhone">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=copy&amp;fieldName=officePhone">copy</a></td></tr>
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="pagerNumber">pagerNumber</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">No&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=edit&amp;fieldName=pagerNumber">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=copy&amp;fieldName=pagerNumber">copy</a></td></tr>
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="percentageEffort">percentageEffort</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">No&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=edit&amp;fieldName=percentageEffort">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=copy&amp;fieldName=percentageEffort">copy</a></td></tr>
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="postalCode">postalCode</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">No&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=edit&amp;fieldName=postalCode">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=copy&amp;fieldName=postalCode">copy</a></td></tr>
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="primaryTitle">primaryTitle</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">No&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=edit&amp;fieldName=primaryTitle">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=copy&amp;fieldName=primaryTitle">copy</a></td></tr>
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="school">school</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">No&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=edit&amp;fieldName=school">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=copy&amp;fieldName=school">copy</a></td></tr>
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="secondaryOfficeLocation">secondaryOfficeLocation</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">No&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=edit&amp;fieldName=secondaryOfficeLocation">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=copy&amp;fieldName=secondaryOfficeLocation">copy</a></td></tr>
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="state">state</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">No&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=edit&amp;fieldName=state">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=copy&amp;fieldName=state">copy</a></td></tr>
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="userName">userName</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">No&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=edit&amp;fieldName=userName">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;methodToCall=copy&amp;fieldName=userName">copy</a></td></tr></tbody></table><br><div class="exportlinks">Export options: 
 <a href="https://test.kuali.org/kra-reg/kr/lookup.do?active=&amp;backLocation=https%3A%2F%2Ftest.kuali.org%2Fkra-reg%2Fportal.do&amp;d-16544-e=1&amp;formKey=88888888&amp;lookupableImplServiceName=kualiLookupable&amp;lookupAnchor=&amp;conversionFields=&amp;hideReturnLink=Yes&amp;6578706f7274=1&amp;methodToCall.search=search&amp;fieldName=&amp;searchUsingOnlyPrimaryKeyValues=false&amp;methodToCall.search.x=9&amp;readOnlyFields=&amp;multipleValues=No&amp;businessObjectClassName=org.kuali.kra.bo.PersonEditableField&amp;referencesToRefresh=&amp;methodToCall.search.y=12&amp;reqSearchResultsActualSize=0&amp;searchResultKey=searchResults42&amp;methodToCall=viewResults&amp;suppressActions=No"><span class="export csv">CSV </span></a>|
