--- a/menu/iframes/maint-pro-abstracttype.html
+++ b/menu/iframes/maint-pro-abstracttype.html
@@ -162,7 +162,7 @@
 
 
 		
-			<div class="lookupcreatenew" title="Create a new record"><a href="#"><img src="maint-pro-abstracttype_files/tinybutton-createnew.gif" alt="create new" height="15" width="70"></a></div>
+			<div class="lookupcreatenew" title="Create a new record"><a href="maint-maintdoc-pro-AbstractType.html"><img src="maint-pro-abstracttype_files/tinybutton-createnew.gif" alt="create new" width="70" height="15" border="0"></a></div>
 		
 
 		
@@ -1186,91 +1186,91 @@
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="1">1</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Project Summary&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.AbstractType&amp;methodToCall=edit&amp;abstractTypeCode=1">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.AbstractType&amp;methodToCall=copy&amp;abstractTypeCode=1">copy</a></td></tr>
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="10">10</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Equipment&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.AbstractType&amp;methodToCall=edit&amp;abstractTypeCode=10">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.AbstractType&amp;methodToCall=copy&amp;abstractTypeCode=10">copy</a></td></tr>
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="11">11</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Other Resources&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.AbstractType&amp;methodToCall=edit&amp;abstractTypeCode=11">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.AbstractType&amp;methodToCall=copy&amp;abstractTypeCode=11">copy</a></td></tr>
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="12">12</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Suggested Reviewers&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.AbstractType&amp;methodToCall=edit&amp;abstractTypeCode=12">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.AbstractType&amp;methodToCall=copy&amp;abstractTypeCode=12">copy</a></td></tr>
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="13">13</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Publications&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.AbstractType&amp;methodToCall=edit&amp;abstractTypeCode=13">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.AbstractType&amp;methodToCall=copy&amp;abstractTypeCode=13">copy</a></td></tr>
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="14">14</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Reviewers Not to Include&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.AbstractType&amp;methodToCall=edit&amp;abstractTypeCode=14">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.AbstractType&amp;methodToCall=copy&amp;abstractTypeCode=14">copy</a></td></tr>
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="15">15</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Deviation Authorization&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.AbstractType&amp;methodToCall=edit&amp;abstractTypeCode=15">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.AbstractType&amp;methodToCall=copy&amp;abstractTypeCode=15">copy</a></td></tr>
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="2">2</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Technical Abstract&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.AbstractType&amp;methodToCall=edit&amp;abstractTypeCode=2">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.AbstractType&amp;methodToCall=copy&amp;abstractTypeCode=2">copy</a></td></tr>
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="3">3</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Layman Abstract&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.AbstractType&amp;methodToCall=edit&amp;abstractTypeCode=3">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.AbstractType&amp;methodToCall=copy&amp;abstractTypeCode=3">copy</a></td></tr>
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="4">4</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Labs&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.AbstractType&amp;methodToCall=edit&amp;abstractTypeCode=4">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.AbstractType&amp;methodToCall=copy&amp;abstractTypeCode=4">copy</a></td></tr>
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="5">5</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Clinical&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.AbstractType&amp;methodToCall=edit&amp;abstractTypeCode=5">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.AbstractType&amp;methodToCall=copy&amp;abstractTypeCode=5">copy</a></td></tr>
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="6">6</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Animal&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.AbstractType&amp;methodToCall=edit&amp;abstractTypeCode=6">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.AbstractType&amp;methodToCall=copy&amp;abstractTypeCode=6">copy</a></td></tr>
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="7">7</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Computer&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.AbstractType&amp;methodToCall=edit&amp;abstractTypeCode=7">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.AbstractType&amp;methodToCall=copy&amp;abstractTypeCode=7">copy</a></td></tr>
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="8">8</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Office&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.AbstractType&amp;methodToCall=edit&amp;abstractTypeCode=8">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.AbstractType&amp;methodToCall=copy&amp;abstractTypeCode=8">copy</a></td></tr>
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="9">9</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Other Facilities&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.AbstractType&amp;methodToCall=edit&amp;abstractTypeCode=9">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.AbstractType&amp;methodToCall=copy&amp;abstractTypeCode=9">copy</a></td></tr></tbody></table><br><div class="exportlinks">Export options: 
 <a href="https://test.kuali.org/kra-reg/kr/lookup.do?backLocation=https%3A%2F%2Ftest.kuali.org%2Fkra-reg%2Fportal.do&amp;d-16544-e=1&amp;formKey=88888888&amp;abstractTypeCode=&amp;lookupableImplServiceName=kualiLookupable&amp;lookupAnchor=&amp;conversionFields=&amp;hideReturnLink=Yes&amp;6578706f7274=1&amp;methodToCall.search=search&amp;searchUsingOnlyPrimaryKeyValues=false&amp;methodToCall.search.x=34&amp;readOnlyFields=&amp;multipleValues=No&amp;businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.AbstractType&amp;referencesToRefresh=&amp;methodToCall.search.y=16&amp;description=&amp;reqSearchResultsActualSize=0&amp;searchResultKey=searchResults36&amp;methodToCall=viewResults&amp;suppressActions=No"><span class="export csv">CSV </span></a>|
