--- a/menu/iframes/maint-pro-deadlinetype.html
+++ b/menu/iframes/maint-pro-deadlinetype.html
@@ -162,7 +162,7 @@
 
 
 		
-			<div class="lookupcreatenew" title="Create a new record"><a href="#"><img src="maint-pro-deadlinetype_files/tinybutton-createnew.gif" alt="create new" height="15" width="70"></a></div>
+			<div class="lookupcreatenew" title="Create a new record"><a href="maint-maintdoc-pro-DeadlineType.html"><img src="maint-pro-deadlinetype_files/tinybutton-createnew.gif" alt="create new" width="70" height="15" border="0"></a></div>
 		
 
 		
@@ -1186,13 +1186,13 @@
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="P">P</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Postmark&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?deadlineTypeCode=P&amp;businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.DeadlineType&amp;methodToCall=edit">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?deadlineTypeCode=P&amp;businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.DeadlineType&amp;methodToCall=copy">copy</a></td></tr>
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="R">R</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Receipt&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?deadlineTypeCode=R&amp;businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.DeadlineType&amp;methodToCall=edit">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?deadlineTypeCode=R&amp;businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.DeadlineType&amp;methodToCall=copy">copy</a></td></tr></tbody></table><br><div class="exportlinks">Export options: 
 <a href="https://test.kuali.org/kra-reg/kr/lookup.do?backLocation=https%3A%2F%2Ftest.kuali.org%2Fkra-reg%2Fportal.do&amp;d-16544-e=1&amp;formKey=88888888&amp;lookupableImplServiceName=kualiLookupable&amp;conversionFields=&amp;lookupAnchor=&amp;hideReturnLink=Yes&amp;6578706f7274=1&amp;methodToCall.search=search&amp;searchUsingOnlyPrimaryKeyValues=false&amp;readOnlyFields=&amp;methodToCall.search.x=46&amp;multipleValues=No&amp;deadlineTypeCode=&amp;businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.DeadlineType&amp;referencesToRefresh=&amp;methodToCall.search.y=5&amp;description=&amp;reqSearchResultsActualSize=0&amp;searchResultKey=searchResults38&amp;methodToCall=viewResults&amp;suppressActions=No"><span class="export csv">CSV </span></a>|
