--- a/menu/iframes/maint-pro-mailby.html
+++ b/menu/iframes/maint-pro-mailby.html
@@ -191,7 +191,7 @@
 
 
 		
-			<div class="lookupcreatenew" title="Create a new record"><a href="#"><img src="maint-pro-mailby_files/tinybutton-createnew.gif" alt="create new" height="15" width="70"></a>   </div>
+			<div class="lookupcreatenew" title="Create a new record"><a href="maint-maintdoc-pro-MailBy.html"><img src="maint-pro-mailby_files/tinybutton-createnew.gif" alt="create new" width="70" height="15" border="0"></a>   </div>
 		
 
 		
