--- a/menu/iframes/maint-maintdoc-pro-PersonEditable.html
+++ b/menu/iframes/maint-maintdoc-pro-PersonEditable.html
@@ -111,7 +111,7 @@
 	
 
 
-	<link href="maint-maintdoc-pro-PersonEditable_files/kuali.css" rel="stylesheet" type="text/css">
+	<link href="../../css/kuali.css" rel="stylesheet" type="text/css">
 
 
 
