--- a/menu/iframes/maint-maintdoc-shared-NSFCode.html
+++ b/menu/iframes/maint-maintdoc-shared-NSFCode.html
@@ -111,7 +111,7 @@
 	
 
 
-	<link href="maint-maintdoc-shared-NSFCode_files/kuali.css" rel="stylesheet" type="text/css">
+	<link href="../../css/kuali.css" rel="stylesheet" type="text/css">
 
 
 
