--- a/menu/iframes/maint-pro-PersonDocumentTypeCode.html
+++ b/menu/iframes/maint-pro-PersonDocumentTypeCode.html
@@ -162,7 +162,7 @@
 
 
 		
-			<div class="lookupcreatenew" title="Create a new record"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PropPerDocType&amp;methodToCall=start"><img src="maint-pro-PersonDocumentTypeCode_files/tinybutton-createnew.gif" alt="create new" height="15" width="70"></a></div>
+			<div class="lookupcreatenew" title="Create a new record"><a href="maint-maintdoc-pro-PersonDocumentType.html?businessObjectClassName=org.kuali.kra.bo.PropPerDocType&methodToCall=start"><img src="maint-pro-PersonDocumentTypeCode_files/tinybutton-createnew.gif" alt="create new" width="70" height="15" border="0"></a></div>
 		
 
 		
@@ -1186,31 +1186,31 @@
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="1">1</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Biosketch&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PropPerDocType&amp;documentTypeCode=1&amp;methodToCall=edit">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PropPerDocType&amp;documentTypeCode=1&amp;methodToCall=copy">copy</a></td></tr>
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="2">2</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Currentpending&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PropPerDocType&amp;documentTypeCode=2&amp;methodToCall=edit">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PropPerDocType&amp;documentTypeCode=2&amp;methodToCall=copy">copy</a></td></tr>
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="3">3</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Budget Details&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PropPerDocType&amp;documentTypeCode=3&amp;methodToCall=edit">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PropPerDocType&amp;documentTypeCode=3&amp;methodToCall=copy">copy</a></td></tr>
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="4">4</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Statement of Commitment &nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PropPerDocType&amp;documentTypeCode=4&amp;methodToCall=edit">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PropPerDocType&amp;documentTypeCode=4&amp;methodToCall=copy">copy</a></td></tr>
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="5">5</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Other&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PropPerDocType&amp;documentTypeCode=5&amp;methodToCall=edit">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.bo.PropPerDocType&amp;documentTypeCode=5&amp;methodToCall=copy">copy</a></td></tr></tbody></table><br><div class="exportlinks">Export options: 
 <a href="https://test.kuali.org/kra-reg/kr/lookup.do?backLocation=https%3A%2F%2Ftest.kuali.org%2Fkra-reg%2Fportal.do&amp;d-16544-e=1&amp;formKey=88888888&amp;lookupableImplServiceName=kualiLookupable&amp;lookupAnchor=&amp;conversionFields=&amp;hideReturnLink=Yes&amp;6578706f7274=1&amp;methodToCall.search=search&amp;searchUsingOnlyPrimaryKeyValues=false&amp;readOnlyFields=&amp;documentTypeCode=&amp;methodToCall.search.x=12&amp;multipleValues=No&amp;businessObjectClassName=org.kuali.kra.bo.PropPerDocType&amp;referencesToRefresh=&amp;methodToCall.search.y=8&amp;description=&amp;reqSearchResultsActualSize=0&amp;searchResultKey=searchResults43&amp;methodToCall=viewResults&amp;suppressActions=No"><span class="export csv">CSV </span></a>|
