--- a/menu/iframes/maint-pro-ProposalResponse.html
+++ b/menu/iframes/maint-pro-ProposalResponse.html
@@ -162,7 +162,7 @@
 
 
 		
-			<div class="lookupcreatenew" title="Create a new record"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.ProposalResponse&amp;methodToCall=start"><img src="maint-pro-ProposalResponse_files/tinybutton-createnew.gif" alt="create new" height="15" width="70"></a></div>
+			<div class="lookupcreatenew" title="Create a new record"><a href="maint-maintdoc-pro-ProposalResponse.html?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.ProposalResponse&methodToCall=start"><img src="maint-pro-ProposalResponse_files/tinybutton-createnew.gif" alt="create new" width="70" height="15" border="0"></a></div>
 		
 
 		
@@ -1186,43 +1186,43 @@
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="1">1</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Federal Solicitation&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.ProposalResponse&amp;proposalResponseCode=1&amp;methodToCall=edit">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.ProposalResponse&amp;proposalResponseCode=1&amp;methodToCall=copy">copy</a></td></tr>
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="2">2</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Unsolicited&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.ProposalResponse&amp;proposalResponseCode=2&amp;methodToCall=edit">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.ProposalResponse&amp;proposalResponseCode=2&amp;methodToCall=copy">copy</a></td></tr>
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="3">3</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Verbal Request for Proposal&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.ProposalResponse&amp;proposalResponseCode=3&amp;methodToCall=edit">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.ProposalResponse&amp;proposalResponseCode=3&amp;methodToCall=copy">copy</a></td></tr>
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="4">4</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">SBIR Solicitation&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.ProposalResponse&amp;proposalResponseCode=4&amp;methodToCall=edit">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.ProposalResponse&amp;proposalResponseCode=4&amp;methodToCall=copy">copy</a></td></tr>
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="5">5</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">STTR Solicitation&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.ProposalResponse&amp;proposalResponseCode=5&amp;methodToCall=edit">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.ProposalResponse&amp;proposalResponseCode=5&amp;methodToCall=copy">copy</a></td></tr>
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="6">6</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Non-Federal Solicitation&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.ProposalResponse&amp;proposalResponseCode=6&amp;methodToCall=edit">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.ProposalResponse&amp;proposalResponseCode=6&amp;methodToCall=copy">copy</a></td></tr>
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="7">7</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">MIT Alliance/Internal&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.ProposalResponse&amp;proposalResponseCode=7&amp;methodToCall=edit">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.ProposalResponse&amp;proposalResponseCode=7&amp;methodToCall=copy">copy</a></td></tr></tbody></table><br><div class="exportlinks">Export options: 
 <a href="https://test.kuali.org/kra-reg/kr/lookup.do?backLocation=https%3A%2F%2Ftest.kuali.org%2Fkra-reg%2Fportal.do&amp;d-16544-e=1&amp;formKey=88888888&amp;lookupableImplServiceName=kualiLookupable&amp;conversionFields=&amp;lookupAnchor=&amp;hideReturnLink=Yes&amp;proposalResponseCode=&amp;6578706f7274=1&amp;methodToCall.search=search&amp;searchUsingOnlyPrimaryKeyValues=false&amp;methodToCall.search.x=27&amp;readOnlyFields=&amp;multipleValues=No&amp;businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.ProposalResponse&amp;referencesToRefresh=&amp;methodToCall.search.y=7&amp;description=&amp;reqSearchResultsActualSize=0&amp;searchResultKey=searchResults46&amp;methodToCall=viewResults&amp;suppressActions=No"><span class="export csv">CSV </span></a>|
