--- a/menu/iframes/maint-pro-carriertype.html
+++ b/menu/iframes/maint-pro-carriertype.html
@@ -162,7 +162,7 @@
 
 
 		
-			<div class="lookupcreatenew" title="Create a new record"><a href="#"><img src="maint-pro-carriertype_files/tinybutton-createnew.gif" alt="create new" height="15" width="70"></a></div>
+			<div class="lookupcreatenew" title="Create a new record"><a href="maint-maintdoc-pro-CarrierType.html"><img src="maint-pro-carriertype_files/tinybutton-createnew.gif" alt="create new" width="70" height="15" border="0"></a></div>
 		
 
 		
@@ -1186,19 +1186,19 @@
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="1">1</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Regular&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.CarrierType&amp;carrierTypeCode=1&amp;methodToCall=edit">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.CarrierType&amp;carrierTypeCode=1&amp;methodToCall=copy">copy</a></td></tr>
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="2">2</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">DHL&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.CarrierType&amp;carrierTypeCode=2&amp;methodToCall=edit">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.CarrierType&amp;carrierTypeCode=2&amp;methodToCall=copy">copy</a></td></tr>
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="3">3</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Electronic&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.CarrierType&amp;carrierTypeCode=3&amp;methodToCall=edit">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.CarrierType&amp;carrierTypeCode=3&amp;methodToCall=copy">copy</a></td></tr></tbody></table><br><div class="exportlinks">Export options: 
 <a href="https://test.kuali.org/kra-reg/kr/lookup.do?backLocation=https%3A%2F%2Ftest.kuali.org%2Fkra-reg%2Fportal.do&amp;d-16544-e=1&amp;formKey=88888888&amp;lookupableImplServiceName=kualiLookupable&amp;lookupAnchor=&amp;carrierTypeCode=&amp;conversionFields=&amp;hideReturnLink=Yes&amp;6578706f7274=1&amp;methodToCall.search=search&amp;searchUsingOnlyPrimaryKeyValues=false&amp;methodToCall.search.x=37&amp;readOnlyFields=&amp;multipleValues=No&amp;businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.CarrierType&amp;referencesToRefresh=&amp;methodToCall.search.y=6&amp;description=&amp;reqSearchResultsActualSize=0&amp;searchResultKey=searchResults35&amp;methodToCall=viewResults&amp;suppressActions=No"><span class="export csv">CSV </span></a>|
