--- a/menu/iframes/maint-pro-narrativestatus.html
+++ b/menu/iframes/maint-pro-narrativestatus.html
@@ -162,7 +162,7 @@
 
 
 		
-			<div class="lookupcreatenew" title="Create a new record"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.NarrativeStatus&amp;methodToCall=start"><img src="maint-pro-narrativestatus_files/tinybutton-createnew.gif" alt="create new" height="15" width="70"></a></div>
+			<div class="lookupcreatenew" title="Create a new record"><a href="maint-maintdoc-pro-NarrativeStatus.html?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.NarrativeStatus&methodToCall=start"><img src="maint-pro-narrativestatus_files/tinybutton-createnew.gif" alt="create new" width="70" height="15" border="0"></a></div>
 		
 
 		
@@ -1188,13 +1188,13 @@
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="C">C</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Complete&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.NarrativeStatus&amp;narrativeStatusCode=C&amp;methodToCall=edit">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.NarrativeStatus&amp;narrativeStatusCode=C&amp;methodToCall=copy">copy</a></td></tr>
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="I">I</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Incomplete&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.NarrativeStatus&amp;narrativeStatusCode=I&amp;methodToCall=edit">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.NarrativeStatus&amp;narrativeStatusCode=I&amp;methodToCall=copy">copy</a></td></tr></tbody></table><br><div class="exportlinks">Export options: 
 <a href="https://test.kuali.org/kra-reg/kr/lookup.do?backLocation=https%3A%2F%2Ftest.kuali.org%2Fkra-reg%2Fportal.do&amp;d-16544-e=1&amp;formKey=88888888&amp;lookupableImplServiceName=kualiLookupable&amp;narrativeStatusCode=&amp;conversionFields=&amp;lookupAnchor=&amp;hideReturnLink=Yes&amp;6578706f7274=1&amp;methodToCall.search=search&amp;searchUsingOnlyPrimaryKeyValues=false&amp;readOnlyFields=&amp;methodToCall.search.x=22&amp;multipleValues=No&amp;businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.NarrativeStatus&amp;referencesToRefresh=&amp;methodToCall.search.y=13&amp;description=&amp;reqSearchResultsActualSize=0&amp;searchResultKey=searchResults41&amp;methodToCall=viewResults&amp;suppressActions=No"><span class="export csv">CSV </span></a>|
