--- a/menu/iframes/maint-pro-narrativetype.html
+++ b/menu/iframes/maint-pro-narrativetype.html
@@ -162,7 +162,7 @@
 
 
 		
-			<div class="lookupcreatenew" title="Create a new record"><a href="#"><img src="maint-pro-narrativetype_files/tinybutton-createnew.gif" alt="create new" height="15" width="70"></a></div>
+			<div class="lookupcreatenew" title="Create a new record"><a href="maint-maintdoc-pro-NarrativeType.html"><img src="maint-pro-narrativetype_files/tinybutton-createnew.gif" alt="create new" width="70" height="15" border="0"></a></div>
 		
 
 		
@@ -2332,7 +2332,7 @@
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="1">1</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Narrative&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2341,7 +2341,7 @@
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="10">10</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">TOC&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2350,7 +2350,7 @@
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="11">11</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Additional_Key_Persons&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">Y&nbsp;&nbsp;</td>
@@ -2359,7 +2359,7 @@
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="12">12</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Additional_Equipment&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">Y&nbsp;&nbsp;</td>
@@ -2368,7 +2368,7 @@
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="13">13</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Personal_Data&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">Y&nbsp;&nbsp;</td>
@@ -2377,7 +2377,7 @@
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="14">14</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Propietary_Information&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2386,7 +2386,7 @@
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="15">15</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Supplementary_Documentation&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2395,7 +2395,7 @@
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="16">16</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Biosketch&nbsp;&nbsp;</td>
 <td class="infocell">Y&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2404,7 +2404,7 @@
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="17">17</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">CurrentPending&nbsp;&nbsp;</td>
 <td class="infocell">Y&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2413,7 +2413,7 @@
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="18">18</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Profile&nbsp;&nbsp;</td>
 <td class="infocell">Y&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2422,7 +2422,7 @@
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="19">19</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Other_Attachments_Form&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">Y&nbsp;&nbsp;</td>
@@ -2431,7 +2431,7 @@
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="2">2</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Facilities&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2440,7 +2440,7 @@
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="20">20</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">PHS_ResearchPlan_IntroductionToApplication&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2449,7 +2449,7 @@
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="21">21</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">PHS_ResearchPlan_SpecificAims&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2458,7 +2458,7 @@
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="22">22</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">PHS_ResearchPlan_BackgroundSignificance&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2467,7 +2467,7 @@
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="23">23</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">PHS_ResearchPlan_ProgressReport&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2476,7 +2476,7 @@
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="24">24</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">PHS_ResearchPlan_ResearchDesignMethods&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2485,7 +2485,7 @@
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="25">25</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">PHS_ResearchPlan_ProtectionOfHumanSubjects&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2494,7 +2494,7 @@
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="26">26</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">PHS_ResearchPlan_InclusionOfWomenAndMinorities&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2503,7 +2503,7 @@
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="27">27</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">PHS_ResearchPlan_TargetedPlannedEnrollmentTable&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2512,7 +2512,7 @@
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="28">28</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">PHS_ResearchPlan_InclusionOfChildren&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2521,7 +2521,7 @@
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="29">29</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">PHS_ResearchPlan_DataAndSafetyMonitoringPlan&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2530,7 +2530,7 @@
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="3">3</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Equipment&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2539,7 +2539,7 @@
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="30">30</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">PHS_ResearchPlan_VertebrateAnimals&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2548,7 +2548,7 @@
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="31">31</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">PHS_ResearchPlan_ConsortiumContractualArrangements&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2557,7 +2557,7 @@
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="32">32</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">PHS_ResearchPlan_LettersOfSupport&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2566,7 +2566,7 @@
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="33">33</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">PHS_ResearchPlan_ResourceSharingPlans&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2575,7 +2575,7 @@
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="34">34</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">PHS_ResearchPlan_Appendix&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">Y&nbsp;&nbsp;</td>
@@ -2584,7 +2584,7 @@
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="35">35</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">PHS_ModBud_PersonJustification&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2593,7 +2593,7 @@
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="36">36</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">PHS_ModBud_ConsortiumJustification&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2602,7 +2602,7 @@
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="37">37</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">PHS_ModBud_NarrativeJustification&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2611,7 +2611,7 @@
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="38">38</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">PHS_Certification_Explanation&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2620,7 +2620,7 @@
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="39">39</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">PHS_Cover_Letter&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2629,7 +2629,7 @@
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="4">4</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Bibliography&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2638,7 +2638,7 @@
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="40">40</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Performance_sites&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2647,7 +2647,7 @@
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="41">41</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">SF424V2_AdditionalProjectTitle&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2656,7 +2656,7 @@
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="42">42</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">SF424V2_AdditionalCongressionalDistricts&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2665,7 +2665,7 @@
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="43">43</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">PHS_ResearchPlan_InclusionEnrollmentReport&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2674,7 +2674,7 @@
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="44">44</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">PHS_ResearchPlan_ProgressReportPublicationList&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2683,7 +2683,7 @@
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="45">45</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">PHS_ResearchPlan_SelectAgentResearch&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2692,7 +2692,7 @@
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="46">46</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">PHS_ResearchPlan_MultiplePILeadershipPlan&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2701,7 +2701,7 @@
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="47">47</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">NASA_OPI_ProgramSpecificData&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2710,7 +2710,7 @@
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="48">48</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">NASA_OPI_Appendices&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">M&nbsp;&nbsp;</td>
@@ -2719,7 +2719,7 @@
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="49">49</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">NASA_OPI_Non-U.S-OrganizationLettersOfEndorsement&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">M&nbsp;&nbsp;</td>
@@ -2728,7 +2728,7 @@
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="5">5</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Project_Summary&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2737,7 +2737,7 @@
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="50">50</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">NASA_OPI_IRB_ACUC_Letters&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">M&nbsp;&nbsp;</td>
@@ -2746,7 +2746,7 @@
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="51">51</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">ED_GEPA427_Attachment&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2755,7 +2755,7 @@
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="52">52</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">ED_Abstract_Attachment&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2764,7 +2764,7 @@
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="53">53</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Project_Attachments&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">Y&nbsp;&nbsp;</td>
@@ -2773,7 +2773,7 @@
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="54">54</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">ED_SF424_Supplement_Attachment&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2782,7 +2782,7 @@
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="57">57</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Budget_Attachments&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">Y&nbsp;&nbsp;</td>
@@ -2791,7 +2791,7 @@
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="58">58</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">ED_CertificationDebarment&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2800,7 +2800,7 @@
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="59">59</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Institutional Attachment 1&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2809,7 +2809,7 @@
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="6">6</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Pre-Application&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2818,7 +2818,7 @@
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="60">60</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Institutional Attachment 2&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2827,7 +2827,7 @@
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="7">7</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Budget_Justification&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
@@ -2836,7 +2836,7 @@
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="8">8</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Other&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">Y&nbsp;&nbsp;</td>
@@ -2845,7 +2845,7 @@
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="9">9</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">SubAward_Budget&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
 <td class="infocell">N&nbsp;&nbsp;</td>
