--- a/menu/iframes/maint-pro-sciencekeyword.html
+++ b/menu/iframes/maint-pro-sciencekeyword.html
@@ -162,7 +162,7 @@
 
 
 		
-			<div class="lookupcreatenew" title="Create a new record"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.ScienceKeyword&amp;methodToCall=start"><img src="maint-pro-sciencekeyword_files/tinybutton-createnew.gif" alt="create new" height="15" width="70"></a></div>
+			<div class="lookupcreatenew" title="Create a new record"><a href="maint-maintdoc-pro-ScienceKeyword.html?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.ScienceKeyword&methodToCall=start"><img src="maint-pro-sciencekeyword_files/tinybutton-createnew.gif" alt="create new" width="70" height="15" border="0"></a></div>
 		
 
 		
@@ -1186,61 +1186,61 @@
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="1">1</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Diabetes&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.ScienceKeyword&amp;methodToCall=edit&amp;scienceKeywordCode=1">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.ScienceKeyword&amp;methodToCall=copy&amp;scienceKeywordCode=1">copy</a></td></tr>
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="10">10</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Chemosynthesis&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.ScienceKeyword&amp;methodToCall=edit&amp;scienceKeywordCode=10">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.ScienceKeyword&amp;methodToCall=copy&amp;scienceKeywordCode=10">copy</a></td></tr>
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="2">2</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Carbon&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.ScienceKeyword&amp;methodToCall=edit&amp;scienceKeywordCode=2">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.ScienceKeyword&amp;methodToCall=copy&amp;scienceKeywordCode=2">copy</a></td></tr>
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="3">3</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Chlorine&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.ScienceKeyword&amp;methodToCall=edit&amp;scienceKeywordCode=3">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.ScienceKeyword&amp;methodToCall=copy&amp;scienceKeywordCode=3">copy</a></td></tr>
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="4">4</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Heat&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.ScienceKeyword&amp;methodToCall=edit&amp;scienceKeywordCode=4">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.ScienceKeyword&amp;methodToCall=copy&amp;scienceKeywordCode=4">copy</a></td></tr>
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="5">5</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Longwave&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.ScienceKeyword&amp;methodToCall=edit&amp;scienceKeywordCode=5">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.ScienceKeyword&amp;methodToCall=copy&amp;scienceKeywordCode=5">copy</a></td></tr>
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="6">6</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Transmittance&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.ScienceKeyword&amp;methodToCall=edit&amp;scienceKeywordCode=6">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.ScienceKeyword&amp;methodToCall=copy&amp;scienceKeywordCode=6">copy</a></td></tr>
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="7">7</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Temperature&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.ScienceKeyword&amp;methodToCall=edit&amp;scienceKeywordCode=7">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.ScienceKeyword&amp;methodToCall=copy&amp;scienceKeywordCode=7">copy</a></td></tr>
 <tr class="odd">
 <td class="infocell">
 								<a href="#" target="blank" title="8">8</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Amphipods&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.ScienceKeyword&amp;methodToCall=edit&amp;scienceKeywordCode=8">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.ScienceKeyword&amp;methodToCall=copy&amp;scienceKeywordCode=8">copy</a></td></tr>
 <tr class="even">
 <td class="infocell">
 								<a href="#" target="blank" title="9">9</a> &nbsp;
-                            </td>
+                </td>
 <td class="infocell">Ostracods&nbsp;&nbsp;</td>
 <td class="infocell"><a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.ScienceKeyword&amp;methodToCall=edit&amp;scienceKeywordCode=9">edit</a>&nbsp;&nbsp;<a href="https://test.kuali.org/kra-reg/kr/maintenance.do?businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.ScienceKeyword&amp;methodToCall=copy&amp;scienceKeywordCode=9">copy</a></td></tr></tbody></table><br><div class="exportlinks">Export options: 
 <a href="https://test.kuali.org/kra-reg/kr/lookup.do?backLocation=https%3A%2F%2Ftest.kuali.org%2Fkra-reg%2Fportal.do&amp;d-16544-e=1&amp;formKey=88888888&amp;lookupableImplServiceName=kualiLookupable&amp;lookupAnchor=&amp;conversionFields=&amp;hideReturnLink=Yes&amp;6578706f7274=1&amp;methodToCall.search=search&amp;searchUsingOnlyPrimaryKeyValues=false&amp;methodToCall.search.x=50&amp;readOnlyFields=&amp;multipleValues=No&amp;businessObjectClassName=org.kuali.kra.proposaldevelopment.bo.ScienceKeyword&amp;referencesToRefresh=&amp;methodToCall.search.y=13&amp;scienceKeywordCode=&amp;description=&amp;reqSearchResultsActualSize=0&amp;searchResultKey=searchResults47&amp;methodToCall=viewResults&amp;suppressActions=No"><span class="export csv">CSV </span></a>|
