Changes suggested by Rhonda & Lisa
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6030 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-coeus-dev/prop-budget.html
+++ b/kra-coeus-dev/prop-budget.html
@@ -122,7 +122,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             <th><div align="left">*Name</div></th>
             <th>Version #</th>
             <th>Direct Cost</th>
-            <th>Indirect Cost</th>
+            <th>F &amp; A </th>
             <th>Total</th>
             <th>Budget Status</th>
             <th>Final</th>
@@ -145,8 +145,8 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             <td align="right" class="tab-subhead1" scope="row"><div align="center"><a href="#" id="A6" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F6" vspace=0></a></div></td>
             <td class="tab-subhead1">budget a</td>
             <td class="tab-subhead1"><div align="center">1</div></td>
-            <td class="tab-subhead1"><div align="right">45,000</div></td>
             <td class="tab-subhead1"><div align="right">100,000</div></td>
+            <td class="tab-subhead1"><div align="right">45,000</div></td>
             <td class="tab-subhead1"><div align="right">145,000</div></td>
             <td class="tab-subhead1"><div align="center">
               <select onchange="dataChanged()" name="activityType">
@@ -196,9 +196,9 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             <td align="right" class="tab-subhead1" scope="row"><div align="center"><a href="#" id="A7" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F7" vspace=0></a></div></td>
             <td class="tab-subhead1">budget b</td>
             <td class="tab-subhead1"><div align="center">2</div></td>
-            <td class="tab-subhead1"><div align="right">45,000</div></td>
-            <td class="tab-subhead1"><div align="right">100,000</div></td>
-            <td class="tab-subhead1"><div align="right">145,000</div></td>
+            <td class="tab-subhead1"><div align="right">120,000</div></td>
+            <td class="tab-subhead1"><div align="right">50,000</div></td>
+            <td class="tab-subhead1"><div align="right">170,000</div></td>
             <td class="tab-subhead1"><div align="center">
               <select onchange="dataChanged()" name="activityType">
                 <option>select</option>
@@ -247,9 +247,9 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             <td align="right" class="tab-subhead1" scope="row"><div align="center"><a href="#" id="A8" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F8" vspace=0></a></div></td>
             <td class="tab-subhead1">budget c</td>
             <td class="tab-subhead1"><div align="center">3</div></td>
-            <td class="tab-subhead1"><div align="right">45,000</div></td>
-            <td class="tab-subhead1"><div align="right">100,000</div></td>
-            <td class="tab-subhead1"><div align="right">145,000</div></td>
+            <td class="tab-subhead1"><div align="right">140,000</div></td>
+            <td class="tab-subhead1"><div align="right">55,000</div></td>
+            <td class="tab-subhead1"><div align="right">195,000</div></td>
             <td class="tab-subhead1"><div align="center">
               <select onchange="dataChanged()" name="activityType">
                 <option>select</option>
