Made Changes to 7.25 similar to Dev as per Rhonda's email.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6035 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-coeus-dev/prop-permissions.html
+++ b/kra-coeus-dev/prop-permissions.html
@@ -132,11 +132,11 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             <table cellpadding=0 cellspacing="0"  summary="">
               <tr>
                 <th width="35%"><div align="right"> Aggregator: </div></th>
-                <td align=left valign=middle >Smith, Davicia P; <span class="infocell">Beckford, Augustus O</span></td>
+                <td align=left valign=middle >Smith, Davicia P ; <span class="infocell">Beckford, Augustus </span></td>
               </tr>
               <tr>
                 <th><div align="right">Budget Creator:</div></th>
-                <td align=left valign=middle >Bethany Davis; Christy Bland; Cybil Cole; Cheryl Eger </td>
+                <td align=left valign=middle >Davis, Bethany; Bland, Christy; Cole, Cybil; Eger, Cheryl</td>
               </tr>
               <tr>
                 <th><div align="right">Narrative Writer:</div></th>
@@ -219,7 +219,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               <tr>
                 <th>4</th>
                 <td>iu_bd</td>
-                <td>Bethany Davis</td>
+                <td>Davis, Bethany</td>
                 <td align="right">999027</td>
                 <td>Indiana University</td>
                 <td>Budget Creator</td>
@@ -228,7 +228,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               <tr>
                 <th>5</th>
                 <td>iu_cb</td>
-                <td>Christy Bland</td>
+                <td>Bland, Christy </td>
                 <td align="right">999027</td>
                 <td>Indiana University</td>
                 <td>Budget Creator</td>
@@ -237,7 +237,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               <tr>
                 <th>6</th>
                 <td>iu_cc</td>
-                <td>Cybil Cole</td>
+                <td>Cole, Cybil</td>
                 <td align="right">999027</td>
                 <td>Indiana University</td>
                 <td>Budget Creator</td>
@@ -246,7 +246,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               <tr>
                 <th>7</th>
                 <td>iu_ce</td>
-                <td>Cheryl Eger</td>
+                <td>Eger, Cheryl</td>
                 <td align="right">999027</td>
                 <td>Indiana University</td>
                 <td>Budget Creator</td>
@@ -255,7 +255,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               <tr>
                 <th>8</th>
                 <td>iu_es</td>
-                <td>Eric Swank</td>
+                <td>Swank, Eric</td>
                 <td align="right">999027</td>
                 <td>Indiana University</td>
                 <td> unassigned </td>
@@ -264,7 +264,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               <tr>
                 <th>9</th>
                 <td>iu_ews</td>
-                <td>Edward&nbsp; W Stackpole</td>
+                <td>Stackpole, Edward&nbsp; W </td>
                 <td align="right">999027</td>
                 <td>Indiana University</td>
                 <td> unassigned </td>
