--- a/kra-coeus-7-25/prop-permissions.html
+++ b/kra-coeus-7-25/prop-permissions.html
@@ -135,11 +135,11 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           <table cellpadding=0 cellspacing="0"  summary="">
               <tr>
                 <th width="35%"><div align="right"> Aggregator: </div></th>
-                <td align=left valign=middle >Smith Davicia P ; <span class="infocell">Beckford Augustus O</span></td>
+                <td align=left valign=middle >Smith, Davicia P ; <span class="infocell">Beckford, Augustus O</span></td>
               </tr>
               <tr>
                 <th><div align="right">Budget Creator:</div></th>
-                <td align=left valign=middle >Cybil Cole; Bethany Davis; Christy Bland; Cheryl Eger </td>
+                <td align=left valign=middle >Davis, Bethany; Bland, Christy; Cole, Cybil; Eger, Cheryl</td>
               </tr>
               <tr>
                 <th><div align="right">Narrative Writer:</div></th>
@@ -222,7 +222,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               <tr>
                 <th>4</th>
                 <td>iu_bd</td>
-                <td>Bethany Davis</td>
+                <td>Davis, Bethany</td>
                 <td align="right">999028</td>
                 <td>Indiana University</td>
                 <td>Budget Creator</td>
@@ -231,7 +231,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               <tr>
                 <th>5</th>
                 <td>iu_cb</td>
-                <td>Christy Bland</td>
+                <td>Bland, Christy </td>
                 <td align="right">999027</td>
                 <td>Indiana University</td>
                 <td>Budget Creator</td>
@@ -240,7 +240,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               <tr>
                 <th>6</th>
                 <td>iu_cc</td>
-                <td>Cybil Cole</td>
+                <td>Cole, Cybil </td>
                 <td align="right">999029</td>
                 <td>Indiana University</td>
                 <td>Budget Creator</td>
@@ -249,7 +249,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               <tr>
                 <th>7</th>
                 <td>iu_ce</td>
-                <td>Cheryl Eger</td>
+                <td>Eger, Cheryl</td>
                 <td align="right">999030</td>
                 <td>University of Cincinnati </td>
                 <td>Budget Creator</td>
@@ -258,7 +258,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               <tr>
                 <th>8</th>
                 <td>iu_es</td>
-                <td>Eric Swank</td>
+                <td>Swank, Eric </td>
                 <td align="right">888888</td>
                 <td>Purdue University</td>
                 <td> unassigned </td>
@@ -267,7 +267,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               <tr>
                 <th>9</th>
                 <td>iu_ews</td>
-                <td>Edward&nbsp; W Stackpole</td>
+                <td>Stackpole, Edward&nbsp; W </td>
                 <td align="right">999027</td>
                 <td>Indiana University</td>
                 <td> unassigned </td>
